--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.RecipesActivity"></activity>
+        <activity android:name=".activities.CustomizationFinishActivity"></activity>
+        <activity android:name=".activities.CookingTimeCustomizationActivity" />
+        <activity android:name=".activities.ServingsCustomizationActivity" />
+        <activity android:name=".activities.MealsNumberCustomizationActivity" />
+        <activity android:name=".activities.DislikedIngredientsCustomization" />
+        <activity android:name=".activities.AllergyCustomizationActivity" />
+        <activity android:name=".activities.DietCustomizationActivity" />
+        <activity android:name=".activities.StartCustomizationActivity" />
+        <activity android:name=".activities.RecipesActivity" />
         <activity
             android:name=".activities.RecipeActivity"
             android:label="@string/title_activity_recipe"
