--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.android.support:recyclerview-v7:29.1.0'
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    implementation 'org.mongodb:bson:4.0.3'
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
