--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-<<<<<<< HEAD
-        <activity android:name=".view.activities.recipes.CookingStepsActivity"></activity>
+        <activity android:name=".view.activities.authorization.RegistrationActivity"></activity>
+        <activity android:name=".view.activities.recipes.CookingStepsActivity" />
         <activity android:name=".view.activities.recipes.IngredientsActivity" />
-=======
-        <activity android:name=".connection.auth.model.BasicAuth"></activity>
-        <activity android:name=".connection.auth.model.test" />
->>>>>>> bc1fb9a461cdd9706b4745864b1284c931101ba7
+        <activity android:name="piotr.michalkiewicz.mealplannerclient.auth.model.BasicAuth" />
+        <activity android:name="piotr.michalkiewicz.mealplannerclient.auth.model.test" />
         <activity android:name=".view.activities.customization.CustomizationFinishActivity" />
         <activity android:name=".view.activities.customization.CookingTimeCustomizationActivity" />
         <activity android:name=".view.activities.customization.ServingsCustomizationActivity" />
@@ -27,7 +25,7 @@
         <activity android:name=".view.activities.customization.AllergyCustomizationActivity" />
         <activity android:name=".view.activities.customization.DietCustomizationActivity" />
         <activity android:name=".view.activities.customization.StartCustomizationActivity" />
-        <activity android:name=".connection.auth.TestAuthActivity" />
+        <activity android:name="piotr.michalkiewicz.mealplannerclient.auth.TestAuthActivity" />
         <activity
             android:name=".view.activities.recipes.RecipeActivity"
             android:label="@string/title_activity_recipe"
@@ -37,7 +35,7 @@
             android:label="@string/title_activity_main_menu"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".view.activities.login.LoginActivity"
+            android:name=".view.activities.authorization.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
