--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation files('libs/commons-io-2.6.jar')
+    implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation "androidx.preference:preference-ktx:1.1.0"
 }
