--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.activities.authorization.RegistrationActivity"></activity>
+        <activity android:name=".view.activities.customization.SettingsActivity"></activity>
+        <activity android:name=".view.activities.authorization.RegistrationActivity" />
         <activity android:name=".view.activities.recipes.CookingStepsActivity" />
         <activity android:name=".view.activities.recipes.IngredientsActivity" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.auth.model.BasicAuth" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.auth.model.test" />
+        <activity android:name=".auth.model.BasicAuth" />
+        <activity android:name=".auth.model.test" />
         <activity android:name=".view.activities.customization.CustomizationFinishActivity" />
         <activity android:name=".view.activities.customization.CookingTimeCustomizationActivity" />
         <activity android:name=".view.activities.customization.ServingsCustomizationActivity" />
@@ -25,7 +26,7 @@
         <activity android:name=".view.activities.customization.AllergyCustomizationActivity" />
         <activity android:name=".view.activities.customization.DietCustomizationActivity" />
         <activity android:name=".view.activities.customization.StartCustomizationActivity" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.auth.TestAuthActivity" />
+        <activity android:name=".auth.TestAuthActivity" />
         <activity
             android:name=".view.activities.recipes.RecipeActivity"
             android:label="@string/title_activity_recipe"
@@ -42,6 +43,27 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
     </application>
