--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    implementation 'com.android.support:recyclerview-v7:29.1.0'
+    implementation 'com.android.support:recyclerview-v7:30.1.0'
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     implementation 'org.mongodb:bson:4.0.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
@@ -54,4 +54,6 @@ dependencies {
     implementation files('libs/commons-io-2.6.jar')
     implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation "androidx.preference:preference-ktx:1.1.0"
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
