--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
         jvmTarget = "1.8"
     }
 }
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     def nav_version = "2.3.0-alpha06"
@@ -54,4 +57,8 @@ dependencies {
     implementation files('libs/commons-io-2.6.jar')
     implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation "androidx.preference:preference-ktx:1.1.0"
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+
 }
