--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.1.0"
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha07'
 }
