--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation "androidx.preference:preference-ktx:1.1.0"
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha07'
+    implementation 'androidx.fragment:fragment:1.3.0-alpha06'
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
