--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.activities.settings.EditAllergiesActivity"></activity>
+        <activity android:name=".view.activities.settings.EditDietActivity"></activity>
+        <activity android:name=".view.activities.settings.EditAvoidedIngredientsActivity" />
+        <activity android:name=".view.activities.settings.EditAllergiesActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
