--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,18 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'androidx.paging:paging-runtime:3.0.0-alpha05'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
     def nav_version = "2.3.0-alpha06"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -62,4 +68,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'android.arch.lifecycle:extensions:2.2.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
