--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 repositories {
@@ -40,6 +41,7 @@ repositories {
 dependencies {
     implementation 'androidx.paging:paging-runtime:3.0.0-alpha05'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
     def nav_version = "2.3.0-alpha06"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -50,7 +52,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    implementation 'com.android.support:recyclerview-v7:30.1.0'
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     implementation 'org.mongodb:bson:4.0.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
