--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.paging:paging-runtime:3.0.0-alpha05'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0-alpha07'
     def nav_version = "2.3.0-alpha06"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
