--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.view.settings.EditWeightActivity"></activity>
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.view.settings.EditHeightActivity" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.view.settings.EditDietActivity" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.view.settings.EditDislikedIngredientsActivity" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.view.settings.EditAllergiesActivity" />
+        <activity android:name=".view.settings.EditActivityLevelActivity"></activity>
+        <activity android:name=".view.settings.EditAgeActivity" />
+        <activity android:name=".view.settings.EditGoalActivity" />
+        <activity android:name=".view.settings.EditWeightActivity" />
+        <activity android:name=".view.settings.EditHeightActivity" />
+        <activity android:name=".view.settings.EditDietActivity" />
+        <activity android:name=".view.settings.EditDislikedIngredientsActivity" />
+        <activity android:name=".view.settings.EditAllergiesActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -35,11 +38,11 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="piotr.michalkiewicz.mealplannerclient.view.settings.EditLocationActivity"
+            android:name=".view.settings.EditLocationActivity"
             android:label="@string/title_activity_edit_location" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.view.settings.EditPasswordActivity" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.view.settings.SettingsActivity" />
-        <activity android:name="piotr.michalkiewicz.mealplannerclient.view.login_and_signup.SignUpActivity" />
+        <activity android:name=".view.settings.EditPasswordActivity" />
+        <activity android:name=".view.settings.SettingsActivity" />
+        <activity android:name=".view.login_and_signup.SignUpActivity" />
         <activity android:name=".view.recipes.CookingStepsActivity" />
         <activity android:name=".view.recipes.IngredientsActivity" />
         <activity android:name=".view.personalization.StartCustomActivity" />
@@ -52,7 +55,7 @@
             android:label="@string/title_activity_main_menu"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="piotr.michalkiewicz.mealplannerclient.view.login_and_signup.LoginActivity"
+            android:name=".view.login_and_signup.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
