--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="piotr.michalkiewicz.mealplannerclient">
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality.
-    -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
@@ -27,18 +22,6 @@
         <activity android:name=".view.settings.EditDietActivity" />
         <activity android:name=".view.settings.EditDislikedIngredientsActivity" />
         <activity android:name=".view.settings.EditAllergiesActivity" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
         <activity
             android:name=".view.settings.EditLocationActivity"
             android:label="@string/title_activity_edit_location" />
@@ -54,8 +37,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.main_menu.MainMenuActivity"
-            android:label="@string/title_activity_main_menu"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/topBar" />
         <activity
             android:name=".view.login_and_signup.LoginActivity"
             android:label="@string/app_name"
