--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.recipes.CookingModeActivity"></activity>
+        <activity android:name=".view.shopping.activities.ShoppingListActivity"></activity>
+        <activity android:name=".view.recipes.CookingModeActivity" />
         <activity android:name=".view.settings.EditActivityLevelActivity" />
         <activity android:name=".view.settings.EditAgeActivity" />
         <activity android:name=".view.settings.EditGoalActivity" />
