--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:label="@string/title_activity_edit_location" />
         <activity android:name=".view.settings.EditPasswordActivity" />
         <activity android:name=".view.settings.SettingsActivity" />
-        <activity android:name=".view.login_and_signup.SignUpActivity" />
+        <activity android:name=".view.login.SignUpActivity" />
         <activity android:name=".view.recipes.CookingStepsActivity" />
         <activity android:name=".view.recipes.IngredientsActivity" />
         <activity android:name=".view.personalization.StartCustomActivity" />
@@ -37,10 +37,10 @@
             android:label="@string/title_activity_recipe"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".view.main_menu.MainMenuActivity"
+            android:name=".view.menu.MainMenuActivity"
             android:theme="@style/topBar" />
         <activity
-            android:name=".view.login_and_signup.LoginActivity"
+            android:name=".view.login.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
