--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.shopping.activities.ShoppingListActivity"></activity>
+        <activity
+            android:name=".view.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity android:name=".view.recipes.CookingModeActivity" />
         <activity android:name=".view.settings.EditActivityLevelActivity" />
         <activity android:name=".view.settings.EditAgeActivity" />
@@ -39,16 +48,12 @@
         <activity
             android:name=".view.menu.MainMenuActivity"
             android:theme="@style/topBar" />
-        <activity
+        <!-- <activity
             android:name=".view.login.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        </activity> -->
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
