--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:name=".view.settings.EditLocationActivity"
             android:label="@string/title_activity_edit_location" />
         <activity android:name=".view.settings.EditPasswordActivity" />
+        <activity android:name=".view.settings.SettingsActivity" />
         <activity android:name=".view.recipes.CookingStepsActivity" />
         <activity android:name=".view.recipes.IngredientsActivity" />
         <activity android:name=".view.personalization.StartCustomActivity" />
