--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,5 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation "com.google.android.material:material:1.1.0"
 }
