--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
+        android:name=".view.MealPlannerClientApplication"
         android:allowBackup="true"
         android:icon="@mipmap/temp_logo"
         android:label="@string/app_name"
@@ -24,22 +25,20 @@
         </intent-filter>
         </activity>
         <activity android:name=".view.recipes.CookingModeActivity" />
-        <activity android:name=".view.settings.EditActivityLevelActivity" />
-        <activity android:name=".view.settings.EditAgeActivity" />
-        <activity android:name=".view.settings.EditGoalActivity" />
-        <activity android:name=".view.settings.EditWeightActivity" />
-        <activity android:name=".view.settings.EditHeightActivity" />
-        <activity android:name=".view.settings.EditDietActivity" />
-        <activity android:name=".view.settings.EditDislikedIngredientsActivity" />
-        <activity android:name=".view.settings.EditAllergiesActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditActivityLevelActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditAgeActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditGoalActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditWeightActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditHeightActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditDietActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditDislikedIngredientsActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditAllergiesActivity" />
         <activity
-            android:name=".view.settings.EditLocationActivity"
+            android:name=".view.userPreferences.oldFragments.EditLocationActivity"
             android:label="@string/title_activity_edit_location" />
-        <activity android:name=".view.settings.EditPasswordActivity" />
-        <activity android:name=".view.settings.SettingsActivity" />
+        <activity android:name=".view.userPreferences.oldFragments.EditPasswordActivity" />
         <activity android:name=".view.recipes.CookingStepsActivity" />
         <activity android:name=".view.recipes.IngredientsActivity" />
-        <activity android:name=".view.personalization.StartCustomActivity" />
         <activity
             android:name=".view.recipes.RecipeActivity"
             android:label="@string/title_activity_recipe"
