--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
@@ -47,7 +48,7 @@ dependencies {
     implementation 'androidx.paging:paging-runtime:3.0.0-alpha05'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0-alpha07'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-rc01'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
@@ -61,7 +62,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
@@ -85,7 +85,7 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
-    implementation "com.google.android.material:material:1.1.0"
+    implementation "com.google.android.material:material:1.2.1"
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
@@ -94,4 +94,14 @@ dependencies {
 
     //rxJava3
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+
+    //hilt
+    def hilt_ver = "2.28-alpha"
+    implementation "com.google.dagger:hilt-android:$hilt_ver"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_ver"
+
+    //hilt for ViewModel
+    def hilt_lifecycle_ver = "1.0.0-alpha01"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_ver"
+    kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_ver"
 }
