--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath "org.projectlombok:lombok:1.18.12"
         def nav_version = "2.3.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
