Circular menu working

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,5 @@ dependencies {
 
     //rxJava3
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    implementation 'com.github.imangazalievm:circlemenu:3.0.0'
 }
